--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "flush-promises": "^1.0.2",
     "jest": "^26.6.3",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
