--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/test-utils": "^1.1.4",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "flush-promises": "^1.0.2",
     "jest": "^26.6.3",
     "node-sass": "^5.0.0",
     "sass-loader": "^10",
+    "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
@@ -40,6 +43,15 @@
       "json",
       "vue"
     ],
+    "collectCoverage": false,
+    "collectCoverageFrom": [
+      "**/*.{js,vue}",
+      "!**/node_modules/**"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
+      "^.+\\.js?$": "<rootDir>/node_modules/babel-jest"
+    },
     "testPathIgnorePatterns": [
       "__tests__/utils",
       "__fixtures__"
