--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "unit": "jest"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vuex": "^3.6.2",
